--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+@layer components{
+    .flex-center-center{
+        @apply flex justify-center items-center
+    }
+    .no-outline{
+        @apply outline-none focus:outline-none
+    }
+    .animation{
+        @apply transition-all ease-in-out duration-300
+    }
+}
