updated using vite

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,7 @@
     background: rgba(237, 240, 245, 0.5);
     backdrop-filter: blur(4px);
 }
+
+.boxShadow{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
